update for the website fixed some layout issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -224,7 +224,7 @@ input, select, textarea {
 				width: calc(100% - 40px);
 			}
 			#banner {
-				padding: 2em;
+				padding: 1em;
 			}
 
 		}
@@ -236,6 +236,7 @@ input, select, textarea {
 		flex-wrap: wrap;
 		box-sizing: border-box;
 		align-items: stretch;
+		background-color: rgb(255, 255, 255);
 	}
 
 		.row > * {
@@ -1033,6 +1034,7 @@ input, select, textarea {
 
 				.row > .col-4-medium {
 					width: 33.33333%;
+					background-color: whitesmoke;
 				}
 
 				.row > .off-4-medium {
@@ -1140,6 +1142,10 @@ input, select, textarea {
 				.row.gtr-50 {
 					margin-top: -20px;
 					margin-left: -20px;
+				}
+				#contactme {
+					position: absolute;
+					left: 20px;
 				}
 
 					.row.gtr-50 > * {
@@ -1456,7 +1462,7 @@ input, select, textarea {
 
 	form label {
 		display: block;
-		color: #252122;
+		color: #8f3f53;
 		font-weight: 400;
 		margin: 0 0 0.5em 0;
 	}
@@ -1502,7 +1508,7 @@ input, select, textarea {
 	}
 
 	form :-ms-input-placeholder {
-		color: #555 !important;
+		color: rgb(177, 78, 78) !important;
 	}
 
 	form ::-moz-focus-inner {
@@ -1993,7 +1999,8 @@ input, select, textarea {
 
 	.icon {
 		text-decoration: none;
-		position: relative;
+		position: absolute;
+		left: 20px;
 		text-decoration: none;
 	}
 
@@ -2055,7 +2062,7 @@ input, select, textarea {
 			}
 
 			.icon.featured.alt {
-				background-color: #252122;
+				background-color: #d4214e;
 			}
 
 				.icon.featured.alt:after {
@@ -2138,8 +2145,8 @@ input, select, textarea {
 
 	.dropotron {
 		border-radius: 5px;
-		background-color: #252122;
-		background-color: rgba(34, 30, 31, 0.98);
+		background-color: #a3a316;
+		background-color: rgba(131, 62, 79, 0.98);
 		padding: 1.25em 1.5em 1.25em 1.5em;
 		font-style: italic;
 		min-width: 13em;
@@ -2404,13 +2411,13 @@ input, select, textarea {
 		/* Header */
 
 			#header {
-				padding: 4em 0 3em 0;
+				padding: 0em 0 3em 0;
 			}
 
 		/* Banner */
 
 			#banner {
-				padding: 6em 0;
+				padding: 1em 0;
 				margin: 3em 0 0 0;
 			}
 
@@ -2887,7 +2894,7 @@ input, select, textarea {
 		/* Banner */
 
 			#banner {
-				padding: 6em 0;
+				padding: 4em 0;
 				margin: 2em 0 0 0;
 			}
 
